Fix alignment of "about"

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -2140,7 +2140,6 @@ $timer-icons: '55', '50', '45', '40', '35', '30', '25', '20', '15', '10', '05',
     -webkit-line-clamp: 2;
     display: -webkit-box;
     overflow: hidden;
-    text-align: left;
     text-overflow: ellipsis;
 
     img.emoji {
